examples/test/testpolicy7518.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy7518
  namespace: namespace253
spec:
  podSelector:
    matchLabels:
      key49: value10
      key11: value24
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key39: value22
          key4: value17
      podSelector:
        matchLabels:
          key13: value33
